--- a/doqmeat/microblog/index.css
+++ b/doqmeat/microblog/index.css
@@ -30,6 +30,14 @@
 			cursor: help;
 		}
 
+		a:hover {
+			text-decoration: none;
+		}
+
+		i {
+			text-shadow: 1px 1px 1px white;
+		}
+
 		main {
 			color: var(--violet);
 			background: #ecd3fc;
@@ -93,7 +101,7 @@
 			position: absolute;
 			bottom: 30px;
 			right: 250px;
-			height: 300px;
+			max-height: 300px;
 			overflow: auto;
 			width: 290px;
 			cursor: move;
@@ -101,6 +109,10 @@
 
 		#picture {
 			max-width: 100%;
+		}
+
+		#pic-link:hover {
+			cursor: zoom-in;
 		}
 
 		#picture-title {
@@ -224,13 +236,20 @@
 		}
 
 		article {
-			margin: 10px;
+			margin: 0;
+			padding: 2px 10px;
+			transition-duration: 0.5s;
 		}
 
 		article:hover {
 			background: white;
 			border-radius: 10px;
-			padding: 5px;
+		}
+
+		.outlink::after {
+			content: "↗";
+			padding-left: 2px;
+			vertical-align: text-bottom
 		}
 
 		#s-m-t-tooltip {
