--- a/doqmeat/!f/homepage-v3/flower.css
+++ b/doqmeat/!f/homepage-v3/flower.css
@@ -719,8 +719,6 @@ h3.feed-title {
 
 @media only screen and (max-width: 860px) {
 
-
-
 	.no {
 		display: none;
 	}
@@ -734,7 +732,7 @@ h3.feed-title {
 	}
 
 	h1 {
-		font-family: spirit;
+		font-family: spirit, var(--fonts);
 		font-size: 25px;
 		letter-spacing: 1px;
 		margin-top: 10px
@@ -784,5 +782,9 @@ h3.feed-title {
 
 	#foot {
 		margin-bottom: 20px;
+	}
+	
+	#webrings{
+		height:300px;
 	}
 }
