--- a/doqmeat/notebook/body.css
+++ b/doqmeat/notebook/body.css
@@ -21,7 +21,7 @@
     h6 {
     	font-family: newpenji;
     	font-weight: normal;
-					line-height:normal;
+    	line-height: normal;
     	margin: 30px 0px;
     }
 
@@ -87,7 +87,8 @@
     	text-align: center;
     }
 
-    #wrapper {
+    #wrapper,
+    main {
     	padding: 3px 15px 5px 35px;
     	max-width: 600px;
     	margin: auto;
