added kitty friends pixel :3

--- a/doqmeat/!f/homepage-v3/flower.css
+++ b/doqmeat/!f/homepage-v3/flower.css
@@ -118,7 +118,7 @@ h2 {
 	line-height: 24px
 }
 
-h3 {
+nav h3 {
 	background: white;
 	background-image: url(/!g/bg/h069-5.gif);
 	border-radius: 10px;
