--- a/doqmeat/vgs/body.css
+++ b/doqmeat/vgs/body.css
@@ -103,6 +103,13 @@ blockquote {
 	padding-left: 5px;
 }
 
+figure{
+	padding:0;
+	margin:10px;
+	text-align: center;
+	font-size:15px;
+}
+
 #s-m-t-tooltip {
 	max-width: 200px;
 	font-family: yoster;
