--- a/doqmeat/vgs/body.css
+++ b/doqmeat/vgs/body.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-	--fonts: ms pgothic, arial;
+	--fonts: ms pgothic, gaegu-l, arial;
 }
 
 body {
@@ -103,11 +103,11 @@ blockquote {
 	padding-left: 5px;
 }
 
-figure{
-	padding:0;
-	margin:10px;
+figure {
+	padding: 0;
+	margin: 10px;
 	text-align: center;
-	font-size:15px;
+	font-size: 15px;
 }
 
 #s-m-t-tooltip {
