--- a/doqmeat/music/frame.css
+++ b/doqmeat/music/frame.css
@@ -1,4 +1,5 @@
-#frame {
+#frame,
+main {
 	background: var(--l-yellow);
 	max-width: 700px;
 	margin: auto;
@@ -40,7 +41,7 @@ footer {
 		background: var(--l-yellow);
 	}
 
-	#frame {
+	#frame, main {
 		border: none;
 		margin: auto;
 	}
@@ -51,7 +52,7 @@ footer {
 		background: var(--l-yellow);
 	}
 
-	#frame {
+	#frame, main {
 		border: none;
 		margin: auto;
 	}
