--- a/doqmeat/music/listening-log/log.css
+++ b/doqmeat/music/listening-log/log.css
@@ -28,6 +28,19 @@ h2 {
 	font-size: 18px;
 }
 
+.log h3{
+	font-size:15px;
+ background: #cfb9b4; 
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: var(--brown);
+}
+
+.log h4{
+	font-size:10px;
+}
+
 #wrapperlog {
 	position: relative;
 	width: 933px;
