--- a/doqmeat/music/listening-log/log.css
+++ b/doqmeat/music/listening-log/log.css
@@ -28,17 +28,17 @@ h2 {
 	font-size: 18px;
 }
 
-.log h3{
-	font-size:15px;
- background: #cfb9b4; 
+.log h3 {
+	font-size: 15px;
+	background: #cfb9b4;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	-webkit-text-stroke-width: 1px;
 	-webkit-text-stroke-color: var(--brown);
 }
 
-.log h4{
-	font-size:10px;
+.log h4 {
+	font-size: 10px;
 }
 
 #wrapperlog {
@@ -233,7 +233,8 @@ footer {
 	header,
 	.info,
 	iframe,
-	#top {
+	#top,
+	.log h3 {
 		display: none;
 	}
 
