--- a/doqmeat/journal/body.css
+++ b/doqmeat/journal/body.css
@@ -55,16 +55,18 @@ i {
 }
 
 li {
-	list-style-image: url('/!g/pix/starblue.gif');
 	list-style-position: inside;
-	padding: 0px;
-	padding-left: 10px;
+	padding: 0 10px;
 	margin: 10px 0;
 }
 
 ul {
 	margin: 0px;
 	padding: 0px 5px 5px 35px;
+}
+
+ul li {
+	list-style-image: url('/!g/pix/starblue.gif');
 }
 
 a {
