--- a/doqmeat/music/index.css
+++ b/doqmeat/music/index.css
@@ -353,17 +353,14 @@ footer {
 	#featured,
 	#is-he-listening,
 	nav,
-	#main,
-	#log {
+	#main {
 		display: block;
 		width: 100%;
 	}
 
-	/*
 	#log {
 		display: none;
 	}
-*/
 
 	h1 {
 		font-size: 25px;
@@ -417,5 +414,12 @@ footer {
 	label {
 		background: var(--l-yellow);
 		border-radius: 10px;
+	}
+}
+
+@media only screen and (max-width:508px) {
+	#log {
+		display: block;
+		width: 100%;
 	}
 }
