--- a/doqmeat/!f/v4/garden.css
+++ b/doqmeat/!f/v4/garden.css
@@ -44,7 +44,7 @@ h2,
 h3,
 h4 {
 	color: #847159;
-	font-family: spirit;
+	font-family: spirit, var(--fonts);
 	text-shadow: 1px 1px 5px var(--peach);
 }
 
@@ -54,7 +54,7 @@ hr {
 }
 
 #header {
-	font-family: spirit;
+	font-family: spirit, var(--fonts);
 	letter-spacing: 3px;
 	color: #F7E2B1;
 	text-shadow: var(--green2) 2px 0px 0px, var(--green2) 1.75517px 0.958851px 0px, var(--green2) 1.0806px 1.68294px 0px, var(--green2) 0.141474px 1.99499px 0px, var(--green2) -0.832294px 1.81859px 0px, var(--green2) -1.60229px 1.19694px 0px, var(--green2) -1.97999px 0.28224px 0px, var(--green2) -1.87291px -0.701566px 0px, var(--green2) -1.30729px -1.51361px 0px, var(--green2) -0.421592px -1.95506px 0px, var(--green2) 0.567324px -1.91785px 0px, var(--green2) 1.41734px -1.41108px 0px, var(--green2) 1.92034px -0.558831px 0px;
