--- a/doqmeat/!f/v4/sunset.css
+++ b/doqmeat/!f/v4/sunset.css
@@ -75,6 +75,8 @@ hr {
 	border-color: var(--yellow);
 }
 
+/* comm box */
+
 #comm button {
 	background: var(--pink);
 	color: white;
@@ -163,19 +165,25 @@ p.feed-item-desc:nth-of-type(1) {
 
 /*status cafe*/
 
+#statuscafe {
+	border-radius: 0 0 10px 10px;
+}
+
 #statuscafe a {
 	color: var(--yellow);
 	text-decoration: none;
 }
 
 #statuscafe-username {
-	background: var(--pink);
 	font-size: 14px;
 	font-family: morningtea, var(--fonts);
+	border: 1px dashed white;
+	border-bottom: 0px;
 }
 
 #statuscafe-content {
-	background: var(--blue);
+	background: white;
+	color: var(--blue2);
 }
 
 /*tooltip*/
