--- a/doqmeat/blog/body.css
+++ b/doqmeat/blog/body.css
@@ -288,6 +288,11 @@ nav a:hover {
 		border-top: 0px;
 	}
 
+	header,main,footer{
+		border-left: 0px;
+		border-right: 0px;
+	}
+
 	footer {
 		border-bottom: 0px;
 	}
