--- a/doqmeat/music/body.css
+++ b/doqmeat/music/body.css
@@ -1,32 +1,36 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
-	--fonts: ms pgothic, natsuzemi, nanum-b, arial;
-	--pink: #FBB5CD;
-	--yellow: #FEEAC7;
-	--peach: #ffdbc2;
-	--brown: #3B2929;
-	--soft-brown: #4D3C3C;
-	--l-pink: #FFE4ED;
-	--l-yellow: #FFF5E4;
-	--l-brown: #9D8A78;
-	--spacing: 5px;
+  --fonts: ms pgothic, natsuzemi, nanum-b, arial;
+  --pink: #fbb5cdbc;
+  --yellow: #feeac7;
+  --peach: #ffdbc2;
+  --brown: #3b2929;
+  --soft-brown: #4d3c3c;
+  --l-pink: #ffe4ed;
+  --l-yellow: #fff5e4;
+  --l-brown: #9d8a78;
+  --spacing: 5px;
+}
+
+html {
+  scrollbar-color: #3b2929 #ffdbc2;
 }
 
 body {
-	background: url(!g/index/yume.png) no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	word-wrap: break-word;
-	margin: 0px;
-	font-family: var(--fonts);
-	line-height: 24px;
-	font-size: 18px;
-	color: var(--soft-brown);
+  background: url(!g/index/yume.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  word-wrap: break-word;
+  margin: 0px;
+  font-family: var(--fonts);
+  line-height: 24px;
+  font-size: 18px;
+  color: var(--soft-brown);
 }
 
 h1,
@@ -35,113 +39,117 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: daydream, gaegu-b, var(--fonts);
-	word-spacing: 10px;
-	letter-spacing: 3px;
-	line-height: normal;
-	background: rgb(254, 234, 199);
-	background: linear-gradient(61deg, rgba(254, 234, 199, 1) 0%, rgba(251, 181, 205, 1) 100%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	-webkit-text-stroke-width: 1px;
-	-webkit-text-stroke-color: var(--l-brown);
+  font-family: daydream, gaegu-b, var(--fonts);
+  word-spacing: 10px;
+  letter-spacing: 3px;
+  line-height: normal;
+  background: rgb(254, 234, 199);
+  background: linear-gradient(
+    61deg,
+    rgba(254, 234, 199, 1) 0%,
+    rgba(251, 181, 205, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: var(--l-brown);
 }
 
 a {
-	text-decoration: none;
-	padding: 0 5px;
-	color: var(--pink);
-	background: var(--soft-brown);
-	font-weight: normal;
-	border-radius: 5px;
-	cursor: help;
+  text-decoration: none;
+  padding: 0 5px;
+  color: var(--pink);
+  background: var(--soft-brown);
+  font-weight: normal;
+  border-radius: 5px;
+  cursor: help;
 }
 
 ::selection {
-	color: var(--peach);
-	background: var(--l-brown);
+  color: var(--peach);
+  background: var(--l-brown);
 }
 
 a:hover {
-	color: var(--soft-brown);
-	background: var(--l-yellow);
+  color: var(--soft-brown);
+  background: var(--l-yellow);
 }
 
 .outlink::after {
-	content: url(/!g/web/materials/outlink1.png);
-	padding-left: 3px;
-	vertical-align: top;
+  content: url(/!g/web/materials/outlink1.png);
+  padding-left: 3px;
+  vertical-align: top;
 }
 
 .outlink:hover::after {
-	content: url(/!g/web/materials/outlink2.png);
+  content: url(/!g/web/materials/outlink2.png);
 }
 
 b {
-	letter-spacing: 2px;
-	text-shadow: 1px 1px 2px var(--pink);
+  letter-spacing: 2px;
+  text-shadow: 1px 1px 2px var(--pink);
 }
 
 i {
-	color: var(--l-brown);
-	letter-spacing: 1px;
-	text-shadow: 1px 1px 2px var(--yellow);
+  color: var(--l-brown);
+  letter-spacing: 1px;
+  text-shadow: 1px 1px 2px var(--yellow);
 }
 
 mark {
-	padding: 0px 2px;
-	background: white;
+  padding: 0px 2px;
+  background: white;
 }
 
 li {
-	list-style-position: inside;
+  list-style-position: inside;
 }
 
 p img {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 summary {
-	padding-left: 10px;
-	padding: 5px;
-	cursor: help;
+  padding-left: 10px;
+  padding: 5px;
+  cursor: help;
 }
 
 blockquote {
-	border-left: 2px solid var(--brown);
-	padding-left: 10px;
-	font-style: italic;
+  border-left: 2px solid var(--brown);
+  padding-left: 10px;
+  font-style: italic;
 }
 
 .spoiler {
-	padding: 0px 5px;
-	color: var(--soft-brown);
-	background: var(--soft-brown);
+  padding: 0px 5px;
+  color: var(--soft-brown);
+  background: var(--soft-brown);
 }
 
 .spoiler:hover {
-	color: var(--l-yellow);
+  color: var(--l-yellow);
 }
 
 .emoji2:after {
-	content: "s";
-	font-family: emojifont;
+  content: "s";
+  font-family: emojifont;
 }
 
 .emoji1:after {
-	content: "i";
-	font-size: 20px;
-	font-family: emojifont;
+  content: "i";
+  font-size: 20px;
+  font-family: emojifont;
 }
 
 #s-m-t-tooltip {
-	max-width: 400px;
-	text-align: center;
-	z-index: 9999;
-	margin: 30px 15px 7px 12px;
-	padding: 5px;
-	border-radius: 5px;
-	border: 5px double var(--pink);
-	color: var(--yellow);
-	background-color: var(--soft-brown);
+  max-width: 400px;
+  text-align: center;
+  z-index: 9999;
+  margin: 30px 15px 7px 12px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 5px double var(--pink);
+  color: var(--yellow);
+  background-color: var(--soft-brown);
 }
