--- a/doqmeat/vgs/body.css
+++ b/doqmeat/vgs/body.css
@@ -1,24 +1,28 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
-	--fonts: ms pgothic, gaegu-l, arial;
+  --fonts: ms pgothic, gaegu-l, arial;
+}
+
+html {
+  scrollbar-color: #b18bb1 #d5eeb1;
 }
 
 body {
-	background: url(celeste/celestefarewell.jpg) no-repeat top fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	word-wrap: break-word;
-	font-size: 18px;
-	line-height: 22px;
-	word-spacing: 5px;
-	font-family: var(--fonts);
-	color: black;
-	margin: 0px;
+  background: url(celeste/celestefarewell.jpg) no-repeat top fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  word-wrap: break-word;
+  font-size: 18px;
+  line-height: 22px;
+  word-spacing: 5px;
+  font-family: var(--fonts);
+  color: black;
+  margin: 0px;
 }
 
 h1,
@@ -27,236 +31,215 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: yoster, var(--fonts);
-	letter-spacing: 3px;
-	line-height: normal;
+  font-family: yoster, var(--fonts);
+  letter-spacing: 3px;
+  line-height: normal;
 }
 
 h3,
 h4,
 h5,
 h6 {
-	text-align: center;
+  text-align: center;
 }
 
 i {
-	background: #C7D9F8;
+  background: #c7d9f8;
 }
 
 mark {
-	background: #D0FF8D;
+  background: #d0ff8d;
 }
 
 a {
-	color: #34636F;
-	font-weight: bold;
-	text-decoration: underline;
+  color: #34636f;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 a:hover {
-	color: black;
-	text-decoration: dotted underline;
-	cursor: help;
+  color: black;
+  text-decoration: dotted underline;
+  cursor: help;
 }
 
 a:focus,
 a:active {
-	outline: 0px;
+  outline: 0px;
 }
 
 li {
-	list-style-position: inside;
+  list-style-position: inside;
 }
 
 hr {
-	background: url(/!g/div/clover.png);
-	height: 23px;
-	border: none;
+  background: url(/!g/div/clover.png);
+  height: 23px;
+  border: none;
 }
 
 p {
-	margin: 15px 0 15px 0;
+  margin: 15px 0 15px 0;
 }
 
 p img {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 mark {
-	background: white;
+  background: white;
 }
 
 ::selection {
-	color: black;
-	background-color: #D69987;
+  color: black;
+  background-color: #d69987;
 }
 
 summary {
-	padding-left: 10px;
-	padding: 5px;
-	cursor: help;
+  padding-left: 10px;
+  padding: 5px;
+  cursor: help;
 }
 
 blockquote {
-	margin: 1em 40px;
-	border-left: 2px dotted black;
-	padding-left: 5px;
+  margin: 1em 40px;
+  border-left: 2px dotted black;
+  padding-left: 5px;
 }
 
 figure {
-	padding: 0;
-	margin: 10px;
-	text-align: center;
-	font-size: 15px;
+  padding: 0;
+  margin: 10px;
+  text-align: center;
+  font-size: 15px;
 }
 
 #s-m-t-tooltip {
-	max-width: 200px;
-	font-family: yoster;
-	text-align: center;
-	z-index: 9999;
-	margin: 30px 15px 7px 12px;
-	padding: 5px;
-	border-radius: 10px;
-	border: 1px dashed black;
-	color: black;
-	background: white;
-}
-
-::-webkit-scrollbar {
-	width: 8px;
-	height: 8px;
-}
-
-::-webkit-scrollbar-thumb:vertical {
-	background: #4DC474;
-	border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:horizontal {
-	background-color: #4DC474;
-	border-radius: 10px;
-}
-
-::-webkit-scrollbar-track {
-	background: rgb(255, 234, 255);
-	background: linear-gradient(90deg, rgba(255, 234, 255, 0.6722338593640581) 0%, rgba(255, 234, 255, 0.6778361002604167) 50%);
+  max-width: 200px;
+  font-family: yoster;
+  text-align: center;
+  z-index: 9999;
+  margin: 30px 15px 7px 12px;
+  padding: 5px;
+  border-radius: 10px;
+  border: 1px dashed black;
+  color: black;
+  background: white;
 }
 
 /*content*/
 
 #iframepc,
 main {
-	background: #ffe3ff;
-	padding: 10px;
-	max-width: 600px;
-	margin: auto;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	border: 2px dashed white;
-	border-radius: 10px;
+  background: #ffe3ff;
+  padding: 10px;
+  max-width: 600px;
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border: 2px dashed white;
+  border-radius: 10px;
 }
 
 .centered {
-	text-align: center;
+  text-align: center;
 }
 
 .outlink:after {
-	content: url(/!g/web/materials/outlink2.png);
-	padding-left: 3px;
-	vertical-align: text-bottom;
+  content: url(/!g/web/materials/outlink2.png);
+  padding-left: 3px;
+  vertical-align: text-bottom;
 }
 
 .info {
-	text-align: right;
-	font-size: 16px;
+  text-align: right;
+  font-size: 16px;
 }
 
 #home {
-	top: 5px;
-	left: 5px;
-	position: fixed;
+  top: 5px;
+  left: 5px;
+  position: fixed;
 }
 
 #corner {
-	position: fixed;
-	right: 5px;
-	bottom: 5px;
+  position: fixed;
+  right: 5px;
+  bottom: 5px;
 }
 
 .spoiler {
-	background-color: black;
-	color: black;
+  background-color: black;
+  color: black;
 }
 
 .spoiler:hover {
-	background-color: lightyellow;
+  background-color: lightyellow;
 }
 
 .date {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 .date::after {
-	content: " -";
-	padding-right: 10px;
+  content: " -";
+  padding-right: 10px;
 }
 
 .cover {
-	float: right;
-	margin: 10px;
+  float: right;
+  margin: 10px;
 }
 
 footer {
-	width: 100%;
-	padding: 10px;
-	text-align: center;
-	border-top: 2px dashed white;
-	background: #ffe3ff;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  border-top: 2px dashed white;
+  background: #ffe3ff;
 }
 
-
 @media only screen and (max-width: 599px) {
+  body {
+    background: #ffe3ff;
+  }
 
-	body {
-		background: #ffe3ff
-	}
+  #iframepc,
+  main {
+    border: none;
+    margin: 0px 0px 0px 0px;
+    border-radius: 0px;
+    padding-bottom: 30px;
+  }
 
-	#iframepc,
-	main {
-		border: none;
-		margin: 0px 0px 0px 0px;
-		border-radius: 0px;
-		padding-bottom: 30px;
-	}
-
-	footer,
-	.hide {
-		display: none;
-	}
+  footer,
+  .hide {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
-	#home {
-		display: none;
-	}
+  #home {
+    display: none;
+  }
 }
 
 /*fonts and cursor*/
 
 @font-face {
-	font-family: 'basiic';
-	src: url(/fonts/basiic.ttf);
+  font-family: "basiic";
+  src: url(/fonts/basiic.ttf);
 }
 
 @font-face {
-	font-family: 'yoster';
-	src: url(/fonts/yoster.ttf);
+  font-family: "yoster";
+  src: url(/fonts/yoster.ttf);
 }
 
 /* Start https://www.cursors-4u.com */
 * {
-	cursor: url(https://cur.cursors-4u.net/games/gam-1/gam14.ani), url(https://cur.cursors-4u.net/games/gam-1/gam14.png), auto !important;
+  cursor: url(https://cur.cursors-4u.net/games/gam-1/gam14.ani),
+    url(https://cur.cursors-4u.net/games/gam-1/gam14.png), auto !important;
 }
 
 /* End https://www.cursors-4u.com */
