some css and index changes to gaming log

--- a/doqmeat/vgs/body.css
+++ b/doqmeat/vgs/body.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  background: url(celeste/celestefarewell.jpg) no-repeat top fixed;
+  background: url(!g/bg.png) no-repeat top fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
